--- a/latex-source/not-chapters/anhang.tex
+++ b/latex-source/not-chapters/anhang.tex
@@ -1,19 +1,3 @@
-\addcontentsline{toc}{section}{Anhang}
-\section*{Anhang}
-
-
-% would be correct but not work
-% \begin{appendix} 
-%     \subsection{nummero uno}
-%     Das ist der Anhang nummero uno
-%     \section{nummero dos}
-%     Das ist der Anhang nummero dos
-% \end{appendix} 
-
-% kinda cheesy but at least works
-\addcontentsline{toc}{subsection}{A.1 nummero uno}
-\subsection*{nummero uno}
-    Das ist der Anhang nummero uno
-\addcontentsline{toc}{subsection}{A.2 nummero dos}
-\subsection*{nummero dos}
-    Das ist der Anhang nummero dos
+\appendix
+\section{Anhang}
+\subsection{Anhang 1}
