--- a/latex-source/main.tex
+++ b/latex-source/main.tex
@@ -54,6 +54,8 @@ sorting=none
 
 \section{Einleitung}
 \input{chapters/einleitung}
+\section{Blablub}
+\input{chapters/blablub}
 
 \newpage
 \input{not-chapters/literary}
