new chapters and some formatting

--- a/latex-source/main.tex
+++ b/latex-source/main.tex
@@ -31,6 +31,7 @@ sorting=none
 \begin{document}
 \pagenumbering{gobble}
 \input{not-chapters/cover}
+\newpage
 \input{not-chapters/titlepage}
 
 \fancyhead[C]{\thepage}
@@ -54,8 +55,24 @@ sorting=none
 
 \section{Einleitung}
 \input{chapters/einleitung}
-\section{Blablub}
-\input{chapters/blablub}
+\newpage
+\section{Agile Unternehmensführung}
+\input{chapters/agile-unternehmensfuehrung}
+\newpage
+\section{Analyse}
+\input{chapters/analyse}
+\newpage
+\section{Konzeption}
+\input{chapters/konzeption}
+\newpage
+\section{Implementierung}
+\input{chapters/implementierung}
+\newpage
+\section{Evaluation}
+\input{chapters/evaluation}
+\newpage
+\section{Fazit}
+\input{chapters/fazit}
 
 \newpage
 \input{not-chapters/literary}
