--- a/latex-source/not-chapters/titlepage.tex
+++ b/latex-source/not-chapters/titlepage.tex
@@ -13,7 +13,7 @@
 \vspace{20pt}
 \hr
 \Large{
-    \textbf{Konzeption und Entwicklung eines Systems für eine softwaregestützte Dokumentation von Flight-Level-Projekten für automatisierte Fortschrittsmessung und Werteorientierung}
+    \textbf{Konzeption und Entwicklung eines Systems zur softwaregestützte Dokumentation von Unternehmensstrukturen für automatisierte Fortschrittsmessung und Werteorientierung }
 }
 \vspace{10pt}
 
