--- a/latex-source/not-chapters/cover.tex
+++ b/latex-source/not-chapters/cover.tex
@@ -12,7 +12,7 @@
         \vspace{3cm}
         \vfill
         \LARGE{
-            \textbf{Konzeption und Entwicklung eines Systems zur softwaregestützte Dokumentation von Unternehmensstrukturen für automatisierte Fortschrittsmessung und Werteorientierung 
+            \textbf{Konzeption und Entwicklung eines Systems zur softwaregestützten Dokumentation von Unternehmensstrukturen für automatisierte Fortschrittsmessung und Werteorientierung 
         }}
         \vfill
 
