some agile stuff

--- a/latex-source/references.bib
+++ b/latex-source/references.bib
@@ -58,3 +58,30 @@ Tool: A Multiple Case Study},
     pages         = {213-214},
     doi           = {https://library.oapen.org/bitstream/handle/20.500.12657/27860/1002144.pdf?sequence=1#page=208}
 }
+
+@article{agilismVsTranditionalApproaches,
+    author = {Daniel J. Fernandez and John D. Fernandez},
+    title = {Agile Project Management —Agilism versus Traditional Approaches},
+    journal = {Journal of Computer Information Systems},
+    volume = {49},
+    number = {2},
+    pages = {10-17},
+    year  = {2008},
+    publisher = {Taylor & Francis},
+    doi = {10.1080/08874417.2009.11646044},
+    URL = {https://www.tandfonline.com/doi/abs/10.1080/08874417.2009.11646044},
+    eprint = {https://www.tandfonline.com/doi/pdf/10.1080/08874417.2009.11646044}
+}
+
+@article{traditionalAndAgileOnProjectSuccess,
+    author = {Agbejule Adebayo, Lehtineva Lassi},
+    title = {The relationship between traditional project management, agile project management and teamwork quality on project success},
+    journal = {International Journal of Organizational Analysis},
+    volume = {30},
+    number = {7},
+    pages = {124-136},
+    year  = {2022},
+    publisher = {Emerald Publishing Limited},
+    doi = {10.1108/IJOA-02-2022-3149},
+    URL = {https://doi.org/10.1108/IJOA-02-2022-3149},
+}
