--- a/latex-source/references.bib
+++ b/latex-source/references.bib
@@ -1,87 +1,77 @@
-% @article{einstein,
-%     author        = {Albert Einstein},
-%     title         = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
-%     journaltitle  = {Annalen der Physik},
-%     year          = {1905},
-%     volume        = {322},
-%     number        = {10},
-%     pages         = {891-921},
-%     doi           = {http://dx.doi.org/10.1002/andp.19053221004}
-% }
-
-% @online{knuthwebsite,
-%     author        = {Donald Knuth},
-%     title         = {Knuth: Computers and Typesetting},
-%     year          = {1984},
-%     url           = {http://www-cs-faculty.stanford.edu/~uno/abcde.html}
-% }
-
 @book{agilesProjektmanagementImBerufsalltag,
-    author        = {Ursula Kusay-Merkle},
-    title         = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
-    pages         = {210},
-    year          = {2018},
-    publisher     = {© Springer-Verlag GmbH, ein Teil von Springer Nature},
-    location      = {Deutschland}
+  author    = {Ursula Kusay-Merkle},
+  title     = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
+  pages     = {210},
+  year      = {2018},
+  publisher = {© Springer-Verlag GmbH, ein Teil von Springer Nature},
+  location  = {Deutschland}
 }
 
 @book{agilitaetNeuDenken,
-    author        = {Klaus Leopold},
-    title         = {Agilität neu denken},
-    year          = {2019},
-    publisher     = {LEANability PRESS},
-    location      = {Deutschland}
+  author    = {Klaus Leopold},
+  title     = {Agilität neu denken},
+  year      = {2019},
+  publisher = {LEANability PRESS},
+  location  = {Deutschland}
+}
+
+@book{valueBasedSoftwareEngeneering,
+  author    = {Stefan Biffl, Aybüke Aurum, Barry Boehm, Hakan Erdogmus, Paul Grünbacher},
+  title     = {Value-Based Software Engineering},
+  year      = {2006},
+  publisher = {Springer Berlin, Heidelberg},
+  location  = {Deutschland}
 }
 
 @article{guidelinesForPortfoliomanagement,
-    author        = {Pietari Pöntinen},
-    title         = {Recommended Guidelines for IT Project Portfolio Management Practices for The Case Companies},
-    year          = {2019},
-    pages         = {90-92},
-    doi           = {https://www.theseus.fi/bitstream/handle/10024/172493/Thesis-P\%c3\%b6ntinen-Pietari-IM-2019.pdf?sequence=2&isAllowed=y}
+  author = {Pietari Pöntinen},
+  title  = {Recommended Guidelines for IT Project Portfolio Management Practices for The Case Companies},
+  year   = {2019},
+  pages  = {90-92},
+  doi    = {https://www.theseus.fi/bitstream/handle/10024/172493/Thesis-P\%c3\%b6ntinen-Pietari-IM-2019.pdf?sequence=2&isAllowed=y}
 }
 
 @article{valueBasedDecisionMaking,
-    author       = {Vitor Freitas Mirko Perkusich Emilia Mendes Pilar Rodr´ıguez Markku Oivo},
-    title         = {Value-Based Decision-Making Using a Web-Based
-Tool: A Multiple Case Study},
-    year          = {2017},
-    pages         = {6-8},
-    doi           = {https://ieeexplore.ieee.org/abstract/document/8305950}
+  author = {Vitor Freitas Mirko Perkusich Emilia Mendes Pilar Rodr´ıguez Markku Oivo},
+  title  = {Value-Based Decision-Making Using a Web-Based
+            Tool: A Multiple Case Study},
+  year   = {2017},
+  pages  = {6-8},
+  doi    = {https://ieeexplore.ieee.org/abstract/document/8305950}
 }
 
 @article{reportingInAgilePortfoliomanagement,
-    author        = {Christoph Johann Stettina and Lennard Schoemaker},
-    title         = {Reporting in Agile Portfolio Management: Routines, Metrics and Artefacts to Maintain an Effective Oversight},
-    journaltitle  = {},
-    year          = {2018},
-    pages         = {213-214},
-    doi           = {https://library.oapen.org/bitstream/handle/20.500.12657/27860/1002144.pdf?sequence=1#page=208}
+  author       = {Christoph Johann Stettina and Lennard Schoemaker},
+  title        = {Reporting in Agile Portfolio Management: Routines, Metrics and Artefacts to Maintain an Effective Oversight},
+  journaltitle = {},
+  year         = {2018},
+  pages        = {213-214},
+  doi          = {https://library.oapen.org/bitstream/handle/20.500.12657/27860/1002144.pdf?sequence=1#page=208}
 }
 
 @article{agilismVsTranditionalApproaches,
-    author = {Daniel J. Fernandez and John D. Fernandez},
-    title = {Agile Project Management —Agilism versus Traditional Approaches},
-    journal = {Journal of Computer Information Systems},
-    volume = {49},
-    number = {2},
-    pages = {10-17},
-    year  = {2008},
-    publisher = {Taylor & Francis},
-    doi = {10.1080/08874417.2009.11646044},
-    URL = {https://www.tandfonline.com/doi/abs/10.1080/08874417.2009.11646044},
-    eprint = {https://www.tandfonline.com/doi/pdf/10.1080/08874417.2009.11646044}
+  author    = {Daniel J. Fernandez and John D. Fernandez},
+  title     = {Agile Project Management —Agilism versus Traditional Approaches},
+  journal   = {Journal of Computer Information Systems},
+  volume    = {49},
+  number    = {2},
+  pages     = {10-17},
+  year      = {2008},
+  publisher = {Taylor & Francis},
+  doi       = {10.1080/08874417.2009.11646044},
+  url       = {https://www.tandfonline.com/doi/abs/10.1080/08874417.2009.11646044},
+  eprint    = {https://www.tandfonline.com/doi/pdf/10.1080/08874417.2009.11646044}
 }
 
 @article{traditionalAndAgileOnProjectSuccess,
-    author = {Agbejule Adebayo, Lehtineva Lassi},
-    title = {The relationship between traditional project management, agile project management and teamwork quality on project success},
-    journal = {International Journal of Organizational Analysis},
-    volume = {30},
-    number = {7},
-    pages = {124-136},
-    year  = {2022},
-    publisher = {Emerald Publishing Limited},
-    doi = {10.1108/IJOA-02-2022-3149},
-    URL = {https://doi.org/10.1108/IJOA-02-2022-3149},
+  author    = {Agbejule Adebayo, Lehtineva Lassi},
+  title     = {The relationship between traditional project management, agile project management and teamwork quality on project success},
+  journal   = {International Journal of Organizational Analysis},
+  volume    = {30},
+  number    = {7},
+  pages     = {124-136},
+  year      = {2022},
+  publisher = {Emerald Publishing Limited},
+  doi       = {10.1108/IJOA-02-2022-3149},
+  url       = {https://doi.org/10.1108/IJOA-02-2022-3149}
 }
