--- a/latex-source/main.tex
+++ b/latex-source/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage[font=small,labelfont=bf,hypcap=false]{caption}
 \usepackage[a4paper,top=20mm,bottom=20mm,right=20mm,left=40mm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{csquotes}
