a lot of new text

--- a/latex-source/references.bib
+++ b/latex-source/references.bib
@@ -1,7 +1,24 @@
-@book{agilesProjektmanagementImBerufsalltag,
+@book{agilesProjektmanagementImBerufsalltagMVPundMMF,
+  author    = {Ursula Kusay-Merkle},
+  title     = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
+  pages     = {171 - 173},
+  year      = {2018},
+  publisher = {© Springer-Verlag GmbH, ein Teil von Springer Nature},
+  location  = {Deutschland}
+}
+@book{agilesProjektmanagementImBerufsalltagFlightLevel,
   author    = {Ursula Kusay-Merkle},
   title     = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
   pages     = {210},
+  year      = {2018},
+  publisher = {© Springer-Verlag GmbH, ein Teil von Springer Nature},
+  location  = {Deutschland}
+}
+
+@book{agilesProjektmanagementImBerufsalltagEpicsUndUserStories,
+  author    = {Ursula Kusay-Merkle},
+  title     = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
+  pages     = {149 - 152},
   year      = {2018},
   publisher = {© Springer-Verlag GmbH, ein Teil von Springer Nature},
   location  = {Deutschland}
@@ -15,29 +32,46 @@
   location  = {Deutschland}
 }
 
-@book{valueBasedSoftwareEngeneering,
-  author    = {Stefan Biffl, Aybüke Aurum, Barry Boehm, Hakan Erdogmus, Paul Grünbacher},
-  title     = {Value-Based Software Engineering},
+@inbook{valueBasedSoftwareEngeneering,
+  author    = {Boehm, Barry W.},
+  editor    = {Biffl, Stefan
+               and Aurum, Ayb{\"u}ke
+               and Boehm, Barry
+               and Erdogmus, Hakan
+               and Gr{\"u}nbacher, Paul},
+  title     = {Value-Based Software Engineering: Overview and Agenda},
+  booktitle = {Value-Based Software Engineering},
   year      = {2006},
-  publisher = {Springer Berlin, Heidelberg},
-  location  = {Deutschland}
-}
-
-@article{guidelinesForPortfoliomanagement,
-  author = {Pietari Pöntinen},
-  title  = {Recommended Guidelines for IT Project Portfolio Management Practices for The Case Companies},
-  year   = {2019},
-  pages  = {90-92},
-  doi    = {https://www.theseus.fi/bitstream/handle/10024/172493/Thesis-P\%c3\%b6ntinen-Pietari-IM-2019.pdf?sequence=2&isAllowed=y}
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {3--14},
+  abstract  = {Much of current software engineering practice and research is done in a value-neutral setting, in which every requirement, use case, object, test case, and defect is equally important. However, most studies of the critical success factors distinguishing successful from failed software projects find that the primary critical success factors lie in the value domain. The value-based software engineering (VBSE) agenda discussed in this chapter and exemplified in the other chapters involves integrating value considerations into the full range of existing and emerging software engineering principles and practices. The chapter then summarizes the primary components of the agenda: value-based requirements engineering, architecting, design and development, verification and validation, planning and control, risk management, quality management, people management, and an underlying theory of VBSE. It concludes with a global road map for realizing the benefits of VBSE.},
+  isbn      = {978-3-540-29263-0},
+  doi       = {10.1007/3-540-29263-2_1},
+  url       = {https://doi.org/10.1007/3-540-29263-2_1}
 }
 
 @article{valueBasedDecisionMaking,
   author = {Vitor Freitas Mirko Perkusich Emilia Mendes Pilar Rodr´ıguez Markku Oivo},
-  title  = {Value-Based Decision-Making Using a Web-Based
-            Tool: A Multiple Case Study},
+  title  = {Value-Based Decision-Making Using a Web-Based Tool: A Multiple Case Study},
   year   = {2017},
   pages  = {6-8},
   doi    = {https://ieeexplore.ieee.org/abstract/document/8305950}
+}
+
+@article{anEmpiricalPerspectiveOnThePractiveInUse,
+  title    = {Agile portfolio management: An empirical perspective on the practice in use},
+  journal  = {International Journal of Project Management},
+  volume   = {33},
+  number   = {1},
+  pages    = {151},
+  year     = {2015},
+  issn     = {0263-7863},
+  doi      = {https://doi.org/10.1016/j.ijproman.2014.03.008},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0263786314000489},
+  author   = {Christoph Johann Stettina and Jeannette Hörz},
+  keywords = {Agile project management, Project portfolio management, Software project management, Organizational routines, Empirical study},
+  abstract = {Agile project management methods revolutionized the way how software projects are executed and organized. The question, however, on how to enable agility outside of individual projects and help larger organizations to compete with small entrepreneurial companies requires further attention. As a possible perspective, project portfolio management provides a global view on resources and their distribution across individual projects according to strategic choices. Based on 30 interviews conducted in 14 large European organizations this study contributes to the understanding of agile project management methods applied in IT project portfolios. First, we empirically identify the domains of practice. Then, guided by literature and our data we discuss the characteristics and implications of the agile portfolio management practice in our case organizations.}
 }
 
 @article{reportingInAgilePortfoliomanagement,
@@ -63,6 +97,32 @@
   eprint    = {https://www.tandfonline.com/doi/pdf/10.1080/08874417.2009.11646044}
 }
 
+@book{systemsApproachToPlanningSchedulingAndControlling,
+  author = {H. Kerzner},
+  title  = {Project Management: A Systems Approach to Planning, Scheduling, and Controlling},
+  year   = {2013}
+}
+
+@article{relationshipBetweenProjectSuccessAndProjectEfficiency,
+  author   = {Pedro Serrador and Rodney Turner},
+  title    = {The Relationship between Project Success and Project Efficiency},
+  journal  = {Project Management Journal},
+  volume   = {46},
+  number   = {1},
+  pages    = {30-39},
+  year     = {2015},
+  doi      = {10.1002/pmj.21468},
+  url      = { 
+              https://doi.org/10.1002/pmj.21468
+              
+              },
+  eprint   = { 
+              https://doi.org/10.1002/pmj.21468
+              
+              },
+  abstract = { Many researchers have suggested that meeting time, scope, and budget goals, sometimes called ‘project efficiency,’ is not the comprehensive measure of project success. Broader measures of success have been recommended; however, to date, nobody has determined empirically the relationship between efficiency and overall success or indeed shown whether efficiency is important at all to overall project success. Our aim in this article is to correct that omission. Through a survey of 1,386 projects we have shown that project efficiency correlates moderately strongly to overall project success (correlation of 0.6 and R2 of 0.36). Efficiency is shown through analysis to be neither the only aspect of project success nor an aspect of project success that can be ignored. }
+}
+
 @article{traditionalAndAgileOnProjectSuccess,
   author    = {Agbejule Adebayo, Lehtineva Lassi},
   title     = {The relationship between traditional project management, agile project management and teamwork quality on project success},
@@ -74,4 +134,12 @@
   publisher = {Emerald Publishing Limited},
   doi       = {10.1108/IJOA-02-2022-3149},
   url       = {https://doi.org/10.1108/IJOA-02-2022-3149}
+}
+
+@article{guidelinesForPortfoliomanagement,
+  author = {Pietari Pöntinen},
+  title  = {Recommended Guidelines for IT Project Portfolio Management Practices for The Case Companies},
+  year   = {2019},
+  pages  = {90-92},
+  doi    = {https://www.theseus.fi/bitstream/handle/10024/172493/Thesis-P\%c3\%b6ntinen-Pietari-IM-2019.pdf?sequence=2&isAllowed=y}
 }
