some new text and references

--- a/latex-source/references.bib
+++ b/latex-source/references.bib
@@ -6,6 +6,18 @@
   publisher = {© Springer-Verlag GmbH, ein Teil von Springer Nature},
   location  = {Deutschland}
 }
+
+@article{TheRoleofProjectManagerinAgileSoftwareTeams,
+  author  = {Gandomani, Taghi Javdani and Tavakoli, Zeinab and Zulzalil, Hazura and Farsani, Hadi Khosravi},
+  journal = {IEEE Access},
+  title   = {The Role of Project Manager in Agile Software Teams: A Systematic Literature Review},
+  year    = {2020},
+  volume  = {8},
+  number  = {},
+  pages   = {117109-117121},
+  doi     = {10.1109/ACCESS.2020.3004450}
+}
+
 @book{agilesProjektmanagementImBerufsalltagFlightLevel,
   author    = {Ursula Kusay-Merkle},
   title     = {Agiles Projektmanagement im Berufsalltag - Für mittlere und kleine Projekte},
@@ -123,6 +135,50 @@
   abstract = { Many researchers have suggested that meeting time, scope, and budget goals, sometimes called ‘project efficiency,’ is not the comprehensive measure of project success. Broader measures of success have been recommended; however, to date, nobody has determined empirically the relationship between efficiency and overall success or indeed shown whether efficiency is important at all to overall project success. Our aim in this article is to correct that omission. Through a survey of 1,386 projects we have shown that project efficiency correlates moderately strongly to overall project success (correlation of 0.6 and R2 of 0.36). Efficiency is shown through analysis to be neither the only aspect of project success nor an aspect of project success that can be ignored. }
 }
 
+@article{NGUYEN20181054,
+  title    = {The use of effectuation in projects: The influence of business case control, portfolio monitoring intensity and project innovativeness},
+  journal  = {International Journal of Project Management},
+  volume   = {36},
+  number   = {8},
+  pages    = {1054-1067},
+  year     = {2018},
+  issn     = {0263-7863},
+  doi      = {https://doi.org/10.1016/j.ijproman.2018.08.005},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0263786318301625},
+  author   = {Na Mi Nguyen and Catherine P. Killen and Alexander Kock and Hans Georg Gemünden},
+  abstract = {Project management approaches are evolving to be more flexible and adaptive to meet the challenges associated with an increasingly complex and dynamic environment. However, potential changes in the underpinning logic supporting project decision making have scarcely been considered. We investigate the role of effectuation, a decision logic most commonly associated with entrepreneurship, as an alternative decision-making approach to the rational ‘causation’ logic that has traditionally underpinned project management processes. We develop and test a model to explore the portfolio- and project-level influences on the application of effectuation in project management. We find that portfolio governance mechanisms related to business case use and portfolio monitoring inhibit the use of effectuation, while project innovativeness is associated with increased use of effectuation. The paper contributes to research and practice by empirically investigating the antecedents to the use of effectuation decision-making logic in project and portfolio management through a multi-level model.}
+}
+
+@article{MARTINSUO200756,
+  title    = {Role of single-project management in achieving portfolio management efficiency},
+  journal  = {International Journal of Project Management},
+  volume   = {25},
+  number   = {1},
+  pages    = {56-65},
+  year     = {2007},
+  issn     = {0263-7863},
+  doi      = {https://doi.org/10.1016/j.ijproman.2006.04.002},
+  url      = {https://www.sciencedirect.com/science/article/pii/S026378630600069X},
+  author   = {Miia Martinsuo and Päivi Lehtonen},
+  keywords = {Project portfolio management, Managing programmes, Managing projects, Implementing strategy, Efficiency},
+  abstract = {This paper examines how single-project management contributes to project portfolio management efficiency. Earlier research has suggested that single-project management may be related to project portfolio-level success, but empirical evidence has been scarce. A questionnaire survey with 279 firms verifies the hypothesized role of information availability, goal setting and systematic decision making in achieving portfolio management efficiency. The results reveal a mediating and direct role of project management efficiency but reject the hypothesized link between reaching project goals and portfolio management efficiency. The results imply that understanding of portfolio-level issues needs to be considered as part of project managers’ capabilities and not only a top management concern.}
+}
+
+@phdthesis{SUAREZ2022-1,
+  author = {Suárez Gómez, Elkin Doney},
+  pages  = {14},
+  school = {Pontificia Universidad Católica del Perú},
+  title  = {Scalable agile frameworks in large enterprise project portfolio management},
+  year   = {2022}
+}
+@phdthesis{SUAREZ2022-2,
+  author = {Suárez Gómez, Elkin Doney},
+  pages  = {31},
+  school = {Pontificia Universidad Católica del Perú},
+  title  = {Scalable agile frameworks in large enterprise project portfolio management},
+  year   = {2022}
+}
+
 @article{traditionalAndAgileOnProjectSuccess,
   author    = {Agbejule Adebayo, Lehtineva Lassi},
   title     = {The relationship between traditional project management, agile project management and teamwork quality on project success},
@@ -134,6 +190,34 @@
   publisher = {Emerald Publishing Limited},
   doi       = {10.1108/IJOA-02-2022-3149},
   url       = {https://doi.org/10.1108/IJOA-02-2022-3149}
+}
+@article{Mohammed2021,
+  author    = {Husam Jasim Mohammed},
+  title     = {RETRACTED ARTICLE: The optimal project selection in portfolio management using fuzzy multi-criteria decision-making methodology},
+  journal   = {Journal of Sustainable Finance \& Investment},
+  volume    = {13},
+  number    = {1},
+  pages     = {125-141},
+  year      = {2021},
+  publisher = {Taylor & Francis},
+  doi       = {10.1080/20430795.2021.1886551},
+  url       = {https://doi.org/10.1080/20430795.2021.1886551},
+  eprint    = {https://doi.org/10.1080/20430795.2021.1886551},
+  abstract  = { We, the Editors and Publisher of the Journal of Sustainable Finance and Investment, have retracted the following articles which are all part of the Special Issue titled Accounting, management, finance, and accountability in times of crisis: A COVID-19 perspective:Quoc Thuan Pham, Xuan Thuy Ho, Thi Phuong Loan Nguyen, Thi Huyen Quyen Pham \& Anh Thanh Bui (2023) Financial reporting quality in pandemic era: case analysis of Vietnamese enterprises, Journal of Sustainable Finance \& Investment, 13:1, 330-352, DOI: 10.1080/20430795.2021.1905411Ibrahim Tawfeeq Alsedrah \& Elhachemi Abdelkader Hacine Gherbi (2023) Impact of COVID-19 pandemic on total market trade value (institutional investors vs non-institutional investors), Journal of Sustainable Finance \& Investment, 13:1, 353-365, 10.1080/20430795.2021.1905412Elhachemi Abdelkader Hacine Gherbi \& Ibrahim Tawfeeq Alsedrah (2023) Does stock market development and COVID-19 pandemic lead to financial crisis: the case of largest Islamic stock exchange market?, Journal of Sustainable Finance \& Investment, 13:1, 297-310, 10.1080/20430795.2021.1896987Manar Tayseer Hasid Batayneh, Rimal Bou-Bakr Saleh Al-Kouki \& Hanadi Eid Albogam (2023) Economic and social implications of the spread of Corona virus on the Saudi Community and the scientific and practical solutions to reduce and limit them, Journal of Sustainable Finance \& Investment, 13:1, 311-329, 10.1080/20430795.2021.1896989Nguyen Bang Nong \& Van Hong Thi Ha (2023) Impact of Covid-19 on Airbnb: evidence from Vietnam, Journal of Sustainable Finance \& Investment, 13:1, 283-296, 10.1080/20430795.2021.1894544Thi Thao Hien Bui, Manimekalai Jambulingam, Muslim Amin \& Nguyen Tan Hung (2023) Impact of COVID-19 pandemic on franchise performance from franchisee perspectives: the role of entrepreneurial orientation, market orientation and franchisor support, Journal of Sustainable Finance \& Investment, 13:1, 264-282, 10.1080/20430795.2021.1891787Atallah Al-hosban, Mohammed Alsharairi \& Isssa Al-Tarawneh (2023) The effect of using the target cost on reducing costs in the tourism companies in Aqaba Special Economic Zone Authority, Journal of Sustainable Finance \& Investment, 13:1, 194-209, 10.1080/20430795.2021.1891782Elvis Elezaj, Halit Shabani, Bekë Kuqi \& Nguyen Tan Hung (2023) Managerial decision-making (DM) in Kosovo organizations based on SPACE model analysis by using AHP fuzzy method, Journal of Sustainable Finance \& Investment, 13:1, 248-263, 10.1080/20430795.2021.1891786Mousa Mohammad Abdullah Saleh, Omar A. A. Jawabreh, Sameer ahmad hmoud al-Amro \& Haneen Mahmoud Ibrahim Saleh (2023) Requirements for enhancing the standard of accounting education and its alignment with labor market requirements a case study hospitality and industrial sector in Jordan, Journal of Sustainable Finance \& Investment, 13:1, 176-193, 10.1080/20430795.2021.1891781Khawla Kassed Abdo (2023) The effect of external economic variables on the conventional banks and Islamic banks financial performance in Jordan: a comparative study, Journal of Sustainable Finance \& Investment, 13:1, 229-247, 10.1080/20430795.2021.1891785Hanan Ahmed AL Qudah (2023) Credit risks measurement in Islamic banks study model, Journal of Sustainable Finance \& Investment, 13:1, 210-228, 10.1080/20430795.2021.1891783Husam Jasim Mohammed (2023) The optimal project selection in portfolio management using fuzzy multi-criteria decision-making methodology, Journal of Sustainable Finance \& Investment, 13:1, 125-141, 10.1080/20430795.2021.1886551M. Hilmi Özkaya \& Maeen Alhuwesh (2023) Effectiveness of exchange rate channel in transiting monetary policy impact to real economy: the case of Yemen, Journal of Sustainable Finance \& Investment, 13:1, 104-117, 10.1080/20430795.2021.1886549Share Aiyed M. Aldosari (2023) The relationship between leaders’ mastery of tacit knowledge management skills and the achievement of competitive advantage at universities, Journal of Sustainable Finance \& Investment, 13:1, 142-160, 10.1080/20430795.2021.1886552Aiman M. Abu Hamour, Deema Daifalleh Mohammed Massadeh \& Mohamed Mahmoud Bshayreh (2023) The impact of the COSO control components on the financial performance in the Jordanian banks and the moderating effect of board independence, Journal of Sustainable Finance \& Investment, 13:1, 161-175, DOI: 10.1080/20430795.2021.1886553Khawla Kassed Abdo, Hanan A. M. Al-Qudah, Laith Akram Al-Qudah \& Mohammad Zakaria al Qudah (2023) The effect of economic variables (workers ‘diaries abroad, bank deposits, gross domestic product, and inflation) on stock returns in the Amman Financial Market from 2005/2018, Journal of Sustainable Finance \& Investment, 13:1, 59-72, DOI: 10.1080/20430795.2021.1883384Mursal Mursal, Mahyudin Ritonga, Fitria Sartika, Ahmad Lahmi, Talqis Nurdianto \& Lukis Alam (2023) The contribution of Amil Zakat, Infaq and Shadaqah Muhammadiyah (LAZISMU) institutions in handling the impact of Covid-19, Journal of Sustainable Finance \& Investment, 13:1, 118-124, 10.1080/20430795.2021.1886550Syed Kaleem Ullah Shah Bukhari, Rani Gul, Tayyaba Bashir, Sumaira Zakir \& Tariq Javed (2023) Exploring managerial skills of Pakistan Public Universities (PPUs)’ middle managers for campus sustainability, Journal of Sustainable Finance \& Investment, 13:1, 73-91, 10.1080/20430795.2021.1883985Mona Solomon Al-Thoblany \& Muna Ibrahim Alyuosef (2023) The role of digital management in improving the performance of tourism sectors in the Kingdom of Saudi Arabia in the light of 2030 vision, Journal of Sustainable Finance \& Investment, 13:1, 44-58, 10.1080/20430795.2021.1882236Bekë Kuqi, Elvis Elezaj, Bedri Millaku, Adem Dreshaj \& Nguyen Tan Hung (2023) The impact of COVID-19 (SARS-CoV-2) in tourism industry: evidence of Kosovo during Q1, Q2 and Q3 period of 2020, Journal of Sustainable Finance \& Investment, 13:1, 92-103, 10.1080/20430795.2021.1883986Saud N. Alshmery, Hind R. Alqirnas \& Muna I. Alyuosef (2023) Influence of the social and economic characteristics of Saudi women on their attitudes toward empowering them in online labor market, Journal of Sustainable Finance \& Investment, 13:1, 1-15, 10.1080/20430795.2021.1874216Amnah A. A. Alasgah \& Eman S. I. Rizk (2023) Empowering Saudi women in the tourism and management sectors according to the Kingdom's 2030 vision, Journal of Sustainable Finance \& Investment, 13:1, 16-43, 10.1080/20430795.2021.1874217Following an investigation by the Taylor \& Francis Research Integrity and Ethics team, it was discovered post-publication that the articles were not peer reviewed appropriately, in line with the Journal's peer review standards and policy. As the stringency of the peer review process is core to the integrity of the publication process, the Editor and Publisher have taken the decision to retract all of the articles within this Special Issue (listed above). The journal has not confirmed if the authors were aware of this compromised peer review process. The journal is committed to correcting the scientific record and will fully cooperate with any institutional investigations into this matter. The authors have been informed of this decision.We have been informed in our decision-making by our policy on publishing ethics and integrity and the COPE guidelines on retractions.The retracted articles will remain online to maintain the scholarly record, but they will be digitally watermarked on each page as ‘Retracted’. }
+}
+
+@article{ProjectPortfolioControl,
+  author   = {Ralf Müller and Miia Martinsuo and Tomas Blomquist},
+  title    = {Project Portfolio Control and Portfolio Management Performance in Different Contexts},
+  journal  = {Project Management Journal},
+  volume   = {39},
+  number   = {3},
+  pages    = {28-42},
+  year     = {2008},
+  doi      = {10.1002/pmj.20053},
+  url      = {https://doi.org/10.1002/pmj.20053},
+  eprint   = {https://doi.org/10.1002/pmj.20053},
+  abstract = {This article investigates the nature and relationship of project portfolio control techniques and portfolio management performance, and how this relationship is moderated by situational idiosyncrasies of internal and external dynamics, industries, governance types, and geographic location. A worldwide questionnaire with 242 responses was used, of which 136 high-performing responses were filtered out for quantitative analysis of best practices. Three portfolio control factors were identified: portfolio selection, portfolio reporting, and decision-making style. Two measures for portfolio management performance were identified: achievement of desired portfolio results and achievement of project and program purpose. The results indicate that different portfolio control mechanisms are associated with different performance measures. A contingency model was developed, including moderating effects by contextual variables. }
 }
 
 @article{guidelinesForPortfoliomanagement,
