new images and some new text

--- a/latex-source/references.bib
+++ b/latex-source/references.bib
@@ -219,6 +219,11 @@
   eprint   = {https://doi.org/10.1002/pmj.20053},
   abstract = {This article investigates the nature and relationship of project portfolio control techniques and portfolio management performance, and how this relationship is moderated by situational idiosyncrasies of internal and external dynamics, industries, governance types, and geographic location. A worldwide questionnaire with 242 responses was used, of which 136 high-performing responses were filtered out for quantitative analysis of best practices. Three portfolio control factors were identified: portfolio selection, portfolio reporting, and decision-making style. Two measures for portfolio management performance were identified: achievement of desired portfolio results and achievement of project and program purpose. The results indicate that different portfolio control mechanisms are associated with different performance measures. A contingency model was developed, including moderating effects by contextual variables. }
 }
+@article{leffingwell20safe,
+  title   = {SAFe Reference Guide},
+  author  = {Leffingwell, Dean and Jemilo, D and Oren, I and Hohmann, L and Knaster, R and Koehnemann, H and Mayner, S and Sales, A and Willeke, E},
+  journal = {Scaled Agile, Inc,[Online]. Available: https://www. scaledagileframework. com/.[Accessed 1 June 2023]}
+}
 
 @article{guidelinesForPortfoliomanagement,
   author = {Pietari Pöntinen},
