--- a/latex-source/not-chapters/tabellenverzeichnis.tex
+++ b/latex-source/not-chapters/tabellenverzeichnis.tex
@@ -1,3 +1,3 @@
 % dis is probably not da way
-\addcontentsline{toc}{section}{Tabellenverzeichnis}
-\section*{Tabellenverzeichnis}
+% \addcontentsline{toc}{section}{Tabellenverzeichnis}
+% \section*{Tabellenverzeichnis}
